fix form input on ios

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -496,22 +496,23 @@ nav {
   color: white;
   font-family: "raleway light";
   font-weight: 600;
-  font-size: 17px;
+  font-size: 12pt;
+  padding: 10px;
 }
 
 .formInput::placeholder {
   color: white;
-  padding: 10px;
   font-family: "raleway light";
   font-weight: 600;
-  font-size: 17px;
+  font-size: 12pt;
+  vertical-align: middle;
 }
 
 .formInput:focus {
   color: white;
   font-family: "raleway light";
   font-weight: 600;
-  font-size: 17px;
+  font-size: 12pt;
 }
 
 .formButton {
